force-app/main/default/objects/Procedure_Diagnosis__c/Procedure_Diagnosis__c.object-meta.xml
<CustomObject>
    <label>Procedure Diagnosis</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Procedure Diagnosis  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procedure Diagnosis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>