force-app/main/default/objects/Procedure_Diagnosis__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Procedure Diagnosis</relationshipLabel>
    <relationshipName>Procedure_Diagnosis</relationshipName>
    <type>Lookup</type>
</CustomField>