force-app/main/default/objects/Procedure_Diagnosis__c/fields/ICD_Codes__c.field-meta.xml
<CustomField>
    <fullName>ICD_Codes__c</fullName>
    <label>ICD Codes</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>ICD_Codes__c.Is_Patient_Specific__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ICD_Codes__c</referenceTo>
    <relationshipLabel>Procedure Diagnosis</relationshipLabel>
    <relationshipName>Procedure_Diagnosis</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>