force-app/main/default/objects/Procedure_Diagnosis__c/fields/Is_Patient_Specific__c.field-meta.xml
<CustomField>
    <fullName>Is_Patient_Specific__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Patient Specific</label>
    <type>Checkbox</type>
</CustomField>