force-app/main/default/objects/Procedure_Diagnosis__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <label>Procedure</label>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Procedure Diagnosis</relationshipLabel>
    <relationshipName>Procedure_Diagnosis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>